fixtures/frontend/milestone-2/valid/pipe-gate-carriers/main.aivi
type User = {
    active: Bool,
    email: Text
}

type Session = {
    user: User
}

val seed:User = { active: True, email: "ada@example.com" }

val maybeActive:Option User =
    seed
     ?|> .active

sig sessions:Signal Session = { user: seed }

sig activeUsers:Signal User =
    sessions
     |> .user
     ?|> .active
