fixtures/frontend/milestone-2/invalid/fanout-non-list-subject/main.aivi
type User = { email: Text }

value user:User = { email: "ada@example.com" }

value emails =
    user
     *|> .email
